[gd_scene load_steps=4 format=3 uid="uid://cnkw0cr7hs1bg"]

[ext_resource type="Script" path="res://Scenes/camp_scene.gd" id="1_ox27c"]
[ext_resource type="PackedScene" uid="uid://c45vn5g0rmckg" path="res://Interface/General/player_info_container.tscn" id="2_y82id"]
[ext_resource type="PackedScene" uid="uid://cideauwj0d7mb" path="res://Interface/CharacterInterface/character_full_info.tscn" id="3_2khyk"]

[node name="CampScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ox27c")

[node name="CharactersContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CharactersContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 4

[node name="PlayerInfoContainer" parent="." instance=ExtResource("2_y82id")]
layout_mode = 0

[node name="CharacterFullInfo" parent="." instance=ExtResource("3_2khyk")]
visible = false
layout_mode = 1
